clippy_final_check_16.log
    Checking meerkat-client v0.1.0 (/Users/luka/src/raik/meerkat-client)
    Checking meerkat-comms-agent v0.1.0 (/Users/luka/src/raik/meerkat-comms-agent)
    Checking meerkat-tools v0.1.0 (/Users/luka/src/raik/meerkat-tools)
    Checking meerkat v0.1.0 (/Users/luka/src/raik/meerkat)
    Checking meerkat-integration-tests v0.1.0 (/Users/luka/src/raik/tests/integration)
error: unused imports: `Config`, `OperationId`, `OperationSpec`, `ResultShape`, `ToolAccessPolicy`, and `WorkKind`
 --> meerkat-tools/tests/rct_contracts.rs:1:20
  |
1 | use meerkat_core::{Config, OperationId, OperationSpec, ResultShape, ToolAccessPolicy, WorkKind};
  |                    ^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^
  |
  = note: `-D unused-imports` implied by `-D warnings`
  = help: to override `-D warnings` add `#[allow(unused_imports)]`

error[E0599]: no method named `tools` found for struct `meerkat_tools::CompositeDispatcher` in the current scope
  --> meerkat-tools/tests/rct_contracts.rs:19:28
   |
19 |     let tools = dispatcher.tools();
   |                            ^^^^^ method not found in `meerkat_tools::CompositeDispatcher`
   |
  ::: /Users/luka/src/raik/meerkat-core/src/agent.rs:69:8
   |
69 |     fn tools(&self) -> Vec<ToolDef>;
   |        ----- the method is available for `meerkat_tools::CompositeDispatcher` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `AgentToolDispatcher` which provides `tools` is implemented but not in scope; perhaps you want to import it
   |
1  + use meerkat_core::AgentToolDispatcher;
   |

error[E0599]: no method named `dispatch` found for struct `meerkat_tools::CompositeDispatcher` in the current scope
  --> meerkat-tools/tests/rct_contracts.rs:50:10
   |
49 |       let result = tool
   |  __________________-
50 | |         .dispatch("task_create", &json!({"subject":"Test","description":"Persist"}))
   | |         -^^^^^^^^ method not found in `meerkat_tools::CompositeDispatcher`
   | |_________|
   |
   |
  ::: /Users/luka/src/raik/meerkat-core/src/agent.rs:75:14
   |
75 |       async fn dispatch(&self, name: &str, args: &Value) -> Result<Value, crate::error::ToolError>;
   |                -------- the method is available for `meerkat_tools::CompositeDispatcher` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `AgentToolDispatcher` which provides `dispatch` is implemented but not in scope; perhaps you want to import it
   |
1  + use meerkat_core::AgentToolDispatcher;
   |

error[E0599]: no method named `dispatch` found for struct `meerkat_tools::CompositeDispatcher` in the current scope
  --> meerkat-tools/tests/rct_contracts.rs:70:10
   |
69 |       let result = tool
   |  __________________-
70 | |         .dispatch("task_create", &json!({"subject":"Task","description":"Track session"}))
   | |         -^^^^^^^^ method not found in `meerkat_tools::CompositeDispatcher`
   | |_________|
   |
   |
  ::: /Users/luka/src/raik/meerkat-core/src/agent.rs:75:14
   |
75 |       async fn dispatch(&self, name: &str, args: &Value) -> Result<Value, crate::error::ToolError>;
   |                -------- the method is available for `meerkat_tools::CompositeDispatcher` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `AgentToolDispatcher` which provides `dispatch` is implemented but not in scope; perhaps you want to import it
   |
1  + use meerkat_core::AgentToolDispatcher;
   |

error[E0277]: the trait bound `meerkat_core::ToolError: serde::Serialize` is not satisfied
   --> meerkat-tools/tests/rct_contracts.rs:81:38
    |
81  |     let json = serde_json::to_value(&err)?;
    |                --------------------  ^^^ the trait `serde_core::ser::Serialize` is not implemented for `meerkat_core::ToolError`
    |                |
    |                required by a bound introduced by this call
    |
    = note: for local types consider adding `#[derive(serde::Serialize)]` to your `meerkat_core::ToolError` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `serde_core::ser::Serialize`:
              &'a T
              &'a mut T
              ()
              (T,)
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
            and 446 others
    = note: required for `&meerkat_core::ToolError` to implement `serde_core::ser::Serialize`
note: required by a bound in `serde_json::to_value`
   --> /Users/luka/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_json-1.0.149/src/value/mod.rs:997:8
    |
995 | pub fn to_value<T>(value: T) -> Result<Value, Error>
    |        -------- required by a bound in this function
996 | where
997 |     T: Serialize,
    |        ^^^^^^^^^ required by this bound in `to_value`

error[E0599]: no method named `tools` found for struct `meerkat_tools::CompositeDispatcher` in the current scope
  --> meerkat-tools/tests/rct_contracts.rs:92:28
   |
92 |     for tool in dispatcher.tools() {
   |                            ^^^^^ method not found in `meerkat_tools::CompositeDispatcher`
   |
  ::: /Users/luka/src/raik/meerkat-core/src/agent.rs:69:8
   |
69 |     fn tools(&self) -> Vec<ToolDef>;
   |        ----- the method is available for `meerkat_tools::CompositeDispatcher` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `AgentToolDispatcher` which provides `tools` is implemented but not in scope; perhaps you want to import it
   |
1  + use meerkat_core::AgentToolDispatcher;
   |

error[E0560]: struct `meerkat_tools::builtin::shell::ShellConfig` has no field named `allowlist`
   --> meerkat-tools/tests/rct_contracts.rs:104:9
    |
104 |         allowlist: vec!["ls".into(), "grep".into()],
    |         ^^^^^^^^^ `meerkat_tools::builtin::shell::ShellConfig` does not have this field
    |
    = note: available fields are: `enabled`, `default_timeout_secs`, `restrict_to_project`, `shell`, `shell_path` ... and 4 others

Some errors have detailed explanations: E0277, E0560, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `meerkat-tools` (test "rct_contracts") due to 7 previous errors
warning: build failed, waiting for other jobs to finish...
